--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("https://media.istockphoto.com/id/1218355494/vi/vec-to/n%E1%BB%81n-b%C3%A0n-poker-m%C3%A0u-xanh-l%C3%A1-c%C3%A2y.jpg?s=612x612&w=0&k=20&c=sjETi6ne9dldvlrOqNLET8sSyOMauzAvZ-nte1U4sPo=");
+    background-image: url("blackjack.jpeg");
     background-size: cover;
     font-weight: bold;
     color: #EAF2E3;
